--- a/index.html
+++ b/index.html
@@ -288,6 +288,36 @@
                     }
                 },
                 'message': 'Message for all checks for field f1'
+            },
+            1: {
+                // Селектор поля
+                'selector': '#f2',
+                // Список проверок для поля
+                'check_list': {
+                    0: {
+                        // Тип проверки
+                        'type': 'sum1>=sum2',
+                        // Параметры проверки
+                        'param': {
+                            'sum1': '#f2',
+                            'sum2': ['#f3', '+', '#f4']
+                        },
+                        // Сообщение для этой проверки
+                        'message': 'F2 Не больше F3 + F4'
+                    },
+                    1: {
+                        // Тип проверки
+                        'type': 'sum1>=sum2',
+                        // Параметры проверки
+                        'param': {
+                            'sum1': '#f2',
+                            'sum2': ['#f1', '-', '#f4']
+                        },
+                        // Сообщение для этой проверки
+                        'message': 'F2 Не больше F1 - F4'
+                    }
+                },
+                'message': 'Message for all checks for field f1'
             }
         });
     });
