--- a/index.html
+++ b/index.html
@@ -258,68 +258,67 @@
         }
     };
 
-    $(function() {
-        formValidator.init($('form'), {
-            // поле
+    var filter = [];
+    filter.push({
+        // Селектор поля
+        'selector': '#f1',
+        // Список проверок для поля
+        'check_list': {
             0: {
-                // Селектор поля
-                'selector': '#f1',
-                // Список проверок для поля
-                'check_list': {
-                    0: {
-                        // Тип проверки
-                        'type': '>',
-                        // Параметры проверки
-                        'param': {
-                            'selector': '#f2'
-                        },
-                        // Сообщение для этой проверки
-                        'message': 'F1 Не больше F2'
-                    },
-                    1: {
-                        // Тип проверки
-                        'type': '>',
-                        // Параметры проверки
-                        'param': {
-                            'value': 10
-                        },
-                        // Сообщение для этой проверки
-                        'message': 'F1 Не больше 10'
-                    }
+                // Тип проверки
+                'type': '>',
+                // Параметры проверки
+                'param': {
+                    'selector': '#f2'
                 },
-                'message': 'Message for all checks for field f1'
+                // Сообщение для этой проверки
+                'message': 'F1 Не больше F2'
             },
             1: {
-                // Селектор поля
-                'selector': '#f2',
-                // Список проверок для поля
-                'check_list': {
-                    0: {
-                        // Тип проверки
-                        'type': 'sum1>=sum2',
-                        // Параметры проверки
-                        'param': {
-                            'sum1': '#f2',
-                            'sum2': ['#f3', '+', '#f4']
-                        },
-                        // Сообщение для этой проверки
-                        'message': 'F2 Не больше F3 + F4'
-                    },
-                    1: {
-                        // Тип проверки
-                        'type': 'sum1>=sum2',
-                        // Параметры проверки
-                        'param': {
-                            'sum1': '#f2',
-                            'sum2': ['#f1', '-', '#f4']
-                        },
-                        // Сообщение для этой проверки
-                        'message': 'F2 Не больше F1 - F4'
-                    }
+                // Тип проверки
+                'type': '>',
+                // Параметры проверки
+                'param': {
+                    'value': 10
                 },
-                'message': 'Message for all checks for field f1'
+                // Сообщение для этой проверки
+                'message': 'F1 Не больше 10'
             }
-        });
+        },
+        'message': 'Message for all checks for field f1'
+    });
+    filter.push({
+        // Селектор поля
+        'selector': '#f2',
+        // Список проверок для поля
+        'check_list': {
+            0: {
+                // Тип проверки
+                'type': 'sum1>=sum2',
+                // Параметры проверки
+                'param': {
+                    'sum1': '#f2',
+                    'sum2': ['#f3', '+', '#f4']
+                },
+                // Сообщение для этой проверки
+                'message': 'F2 Не больше F3 + F4'
+            },
+            1: {
+                // Тип проверки
+                'type': 'sum1>=sum2',
+                // Параметры проверки
+                'param': {
+                    'sum1': '#f2',
+                    'sum2': ['#f1', '-', '#f4']
+                },
+                // Сообщение для этой проверки
+                'message': 'F2 Не больше F1 - F4'
+            }
+        },
+        'message': 'Message for all checks for field f1'
+    });
+    $(function() {
+        formValidator.init($('form'), filter);
     });
 
 </script>
